[tool.poetry]
name = "hashcode2021"
version = "0.1.0"
description = ""
authors = ["Colin McAllister <colinmca242@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7.9"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
hashcode = 'console:main'
